(Service) Update checklist update
