# service/docs/swagger.yaml
@@ -60,6 +60,8 @@ definitions:
         type: integer
       main_record_id:
         type: integer
+      updated_at:
+        type: string
     type: object
   models.DailyRecordDetailResponse:
     properties:
@@ -109,6 +111,11 @@ definitions:
       error:
         type: string
       success:
+        type: boolean
+    type: object
+  models.UpdateCheckListRequest:
+    properties:
+      check_status:
         type: boolean
     type: object
   models.UpdateDailyRecordRequest:
@@ -565,6 +572,66 @@ paths:
       security:
       - BearerAuth: []
       summary: Create Daily Check List
+      tags:
+      - Daily Check Lists
+    put:
+      consumes:
+      - application/json
+      description: Update an existing daily check list
+      parameters:
+      - description: Daily Record ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Daily check list details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateCheckListRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              data:
+                $ref: '#/definitions/models.DailyCheckList'
+              success:
+                type: boolean
+            type: object
+        "201":
+          description: Created
+          schema:
+            properties:
+              data:
+                $ref: '#/definitions/models.DailyCheckList'
+              success:
+                type: boolean
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            properties:
+              error:
+                type: string
+              success:
+                type: boolean
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              error:
+                type: string
+              success:
+                type: boolean
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update Daily Check List
       tags:
       - Daily Check Lists
   /daily-records/status:
